12-deploying-to-multiple-environments/kustomize/staging/ingress/patches/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: primary
  namespace: demo-app
spec:
  routes:
    - name: blah
      kind: Rule
      match: Host(`kubernetes-course-staging.devopsdirective.com`)
      services:
        - kind: Service
          name: client-react-nginx
          port: 8080
          scheme: http
    - kind: Rule
      match: Host(`kubernetes-course-staging.devopsdirective.com`) && PathPrefix(`/api/node`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: api-node
          port: 3000
          scheme: http
    - kind: Rule
      match: Host(`kubernetes-course-staging.devopsdirective.com`) && PathPrefix(`/api/golang`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: api-golang
          port: 8080
          scheme: http
